--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# EDIT Code Generated from workflow
 
-name: CI
+name: Test
 
 # Controls when the workflow will run
 on:
